@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-09T00:59:21Z",
+  "timestamp" : "2022-06-09T08:16:35Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 351,
-  "uniques" : 189,
+  "count" : 352,
+  "uniques" : 190,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
